# Gu-a_uso_uv

./: .gitignore  LICENSE  README.md
docs/: uso_de_uv_en_proyectos_python.md
ejemplos/: pyproject.toml  uv.lock.explicado.md
